--- a/spring-wikr-test/build.gradle
+++ b/spring-wikr-test/build.gradle
@@ -14,6 +14,7 @@ dependencies {
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
     compile(project(":spring-context"))
+    compile(project(":spring-aspects"))
 }
 
 test {
