--- a/spring-wikr-test/build.gradle
+++ b/spring-wikr-test/build.gradle
@@ -13,6 +13,9 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     testCompile group: 'junit', name: 'junit', version: '4.12'
+//    compile group: 'mysql', name: 'mysql-connect-java', version: '5.1.44'
+    compile group: 'org.mybatis', name: 'mybatis', version: '3.4.5'
+    compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
     compile(project(":spring-context"))
     compile(project(":spring-aspects"))
 }
