--- a/spring-wikr-test/build.gradle
+++ b/spring-wikr-test/build.gradle
@@ -18,6 +18,7 @@ dependencies {
     compile group: 'org.mybatis', name: 'mybatis-spring', version: '1.3.2'
     compile(project(":spring-context"))
     compile(project(":spring-aspects"))
+    compile(project(":spring-tx"))
 }
 
 test {
